# OCKcore

./: .gitignore  Cargo.toml  KNOWNISSUES.md  LICENSE  Makefile  README.md  cat.c  echo.c  false.c  head.c  link.c  ls.c  pwd.c  sync.c  true.c  tty.c  uname.c  whoami.c  yes.c
src/: cat.rs  echo.rs  false.rs  head.rs  lib.rs  link.rs  ls.rs  pwd.rs  sync.rs  tty.rs  uname.rs  whoami.rs  yes.rs
